tests/negative/gold/incomplete_char_test.gold
tests/negative/incomplete_char_test.toit:6:3: error: Unterminated character
  '\
  ^~
Compilation failed.
